Add delete functionality.
